--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "morgan": "^1.10.1",
